# pick_n_place

./: CMakeLists.txt  package.xml
include/lwr_pick_n_place/: add_object.hpp  pick_n_place.hpp  pick_n_place_old.hpp
launch/: add_object.launch  joint_position_controllers.yaml  launch_position_controllers.launch  launch_robot_sim.launch
meshes/: epingle.stl  plaque.stl
src/: add_object.cpp  pick_n_place.cpp  pick_n_place_node.cpp  pick_n_place_old.cpp
