<?xml version="1.0"?>
<package>
  <name>lwr_pick_n_place</name>
  <version>1.0.0</version>
  <description>The lwr_pick_n_place package intends to make use of the MoveIt library in order to realize a simple pick and place operation</description>

  <maintainer email="jimmy.dasilva@isir.upmc.fr">Jimmy Da Silva</maintainer>

  <license>CeCILL</license>

  <author email="jimmy.dasilva@isir.upmc.fr">Jimmy Da Silva</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>moveit_planners_ompl</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>moveit_ros_visualization</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
